--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -1,3 +1,13 @@
 body {
   background-color: $bg-color-primary;
 }
+
+.form {
+  .field {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    font-family: "Helvetica", sans-serif;
+    font-size: 14px;
+  }
+}
